# bagua-dev2

./: Cargo.toml
macros/: Cargo.toml
macros/src/: err_enum.rs  get_config.rs  has_changed.rs  init.rs  lib.rs  provider.rs
macros/src/entity/: child_entity.rs  entity.rs  field_group.rs  field_guard.rs  foreign_entity.rs  mod.rs
macros/tests/: child_entity.rs  entity.rs  err_enum.rs  field_guard.rs  get_config.rs  has_changed.rs  init_func.rs  provider.rs
src/: async_task.rs  flake_id.rs  http.rs  json.rs  lib.rs  provider.rs  repository.rs  usecase.rs
src/db/: diesel.rs  mod.rs  primitives.rs  transaction.rs
src/db/diesel/: int_enum.rs  mod.rs  new_type.rs  pg_pool.rs
src/entity/: field.rs  flatten.rs  foreign.rs  mod.rs  model.rs  parent.rs  subset.rs  updater.rs
src/utils/: flake_id.rs  mod.rs
