[package]
name = "bagua-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
replace_with = "0.1.7"
serde = { version = "1", features = ["derive"] }
indexmap = { version = "2.6.0", features = ["serde"] }
anyhow = "1"
serde_json = "1.0.133"

[dependencies.diesel-async]
version = "0.5.1"
features = ["postgres", "deadpool"]
optional = true

[dependencies.diesel]
version = "2.2"
optional = true

[dev-dependencies]
indexmap = { version = "2.6.0", features = ["serde"] }
serde_json = "1"

[features]
default = ["diesel"]
diesel = ["dep:diesel", "dep:diesel-async"]
