[package]
name = "bagua-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
replace_with = "0.1.7"
serde = { version = "1", features = ["derive"] }
indexmap = { version = "2.6.0", features = ["serde"] }
anyhow = "1"
serde_json = "1.0.133"
futures = "0.3.31"
tracing = "0.1.40"

[dependencies.diesel-async]
version = "0.5.1"
features = ["postgres", "deadpool"]
optional = true

[dependencies.diesel]
version = "2.2"
optional = true

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true

[dev-dependencies]
indexmap = { version = "2.6.0", features = ["serde"] }
serde_json = "1"
tokio = { version = "1.41.1", features = ["full"] }

[features]
default = ["diesel", "tokio"]
diesel = ["dep:diesel", "dep:diesel-async"]
tokio = ["dep:tokio"]
