[package]
name = "bagua-dev"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["macros"]

[dependencies]
replace_with = "0.1.7"
serde = { version = "1", features = ["derive"] }
indexmap = { version = "2.6.0", features = ["serde"] }
anyhow = "1"
serde_json = "1.0.133"
futures = "0.3.31"
tracing = "0.1.40"
http = "1"
async-trait = "0.1.83"
imply-hack = "0.1.0"
paste = "1.0.15"

[dependencies.actix-session]
version = "0.10.1"
optional = true

[dependencies.actix-identity]
version = "0.8.0"
optional = true

[dependencies.actix-web]
version = "4.9.0"
optional = true
default-features = false

[dependencies.macros]
path = "macros"

[dependencies.diesel-async]
version = "0.5.1"
features = ["deadpool"]
optional = true

[dependencies.diesel]
version = "2.2"
features = ["serde_json"]
optional = true

[dependencies.tokio]
version = "1"
features = ["full"]
optional = true

[dependencies.flaken]
version = "0.2"
optional = true

[dependencies.derive_more]
version = "1"
default-features = false
features = ["from", "display", "from_str"]

[dev-dependencies]
indexmap = { version = "2.6.0", features = ["serde"] }
serde_json = "1"
tokio = { version = "1.41.1", features = ["full"] }
diesel-async = { version = "0.5.1", features = ["deadpool", "postgres"] }

[features]
default = ["diesel", "tokio", "actix-web"]
diesel-postgres = ["diesel", "diesel-async/postgres"]
diesel-mysql = ["diesel", "diesel/mysql"]
diesel = ["dep:diesel", "dep:diesel-async"]
tokio = ["dep:tokio"]
actix-web = ["dep:actix-web", "dep:actix-identity", "dep:actix-session"]
flake-id = ["flaken"]
flaken = ["dep:flaken"]
