[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.55", features = [
    "full",
    "extra-traits",
    "visit-mut",
    "parsing",
] }


[dev-dependencies]
bagua = { path = "..", package = "bagua-dev" }
anyhow = "1"
linkme = "0.3.31"
tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }